@@ -1,5 +1,6 @@
 Changes for 1.4.3:
 
+ - [ZBX-149] fixed incorrect processing of vm.memory.size key in FreeBSD (Sasha)
  - [ZBX-109] added support of vm.memory.size[pfree] Linux, FreeBSD & Win agents (Sasha)
  - [ZBX-122] Hungarian translate
  - [ZBX-118] fixed show_popup_menu display problem (Sasha)
